modified for baza

--- a/website/index.html
+++ b/website/index.html
@@ -17,6 +17,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/icon" href="favicon.ico">
 
     <script src="config.js"></script>
     <script src="custom.js"></script>
@@ -31,7 +32,7 @@
             overflow-y: scroll;
         }
         .container{
-            font-size: 1.1em;
+            font-size: 1em;
         }
         #loading{
             font-size: 2em;
@@ -354,7 +355,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand active" href="#"><span id="coinName"></span> Mining Pool</a>
+            <a class="navbar-brand active" href="#">
+                <img src="themes/img/baza_logo.png" />
+                <span id="coinName"></span> Mining Pool
+            </a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav" data-toggle="collapse" data-target=".navbar-collapse">
