--- a/website/admin.html
+++ b/website/admin.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
 <meta charset="UTF-8">
-<title></title>
+<title>Baza Mining Pool Admin Center</title>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
@@ -16,6 +16,7 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 <link href="custom.css" rel="stylesheet">
+<link href="themes/baza-theme.css" rel="stylesheet">
 <script src="custom.js"></script>
 
 <style>
@@ -232,7 +233,10 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">Admin Center</a>
+			<a class="navbar-brand" href="#">
+				<img src="themes/img/baza_logo.png" />
+				Baza Mining Pool Admin Center
+			</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<!-- <div class="navbar-form navbar-right">
