--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -155,8 +155,8 @@
             type: 'line',
             width: '100%',
             height: '75',
-            lineColor: '#03a678',
-            fillColor: 'rgba(3, 166, 120, .3)',
+            lineColor: '#273951',
+            fillColor: 'rgba(39, 57, 81, .3)',
             spotColor: null,
             minSpotColor: null,
             maxSpotColor: null,
@@ -172,8 +172,8 @@
 		        type: 'line',
 		        width: '100%',
 		        height: '180',
-		        lineColor: '#03a678',
-		        fillColor: 'rgba(3, 166, 120, .3)',
+		        lineColor: '#273951',
+		        fillColor: 'rgba(39, 57, 81, .3)',
 		        spotColor: null,
 		        minSpotColor: null,
 		        maxSpotColor: null,
@@ -187,8 +187,8 @@
 		        type: 'line',
 		        width: '100%',
 		        height: '180',
-		        lineColor: '#03a678',
-		        fillColor: 'rgba(3, 166, 120, .3)',
+		        lineColor: '#273951',
+		        fillColor: 'rgba(39, 57, 81, .3)',
 		        spotColor: null,
 		        minSpotColor: null,
 		        maxSpotColor: null,
@@ -337,7 +337,7 @@
             updateText('networkHashrate', getReadableHashRateString(lastStats.network.difficulty / lastStats.config.coinDifficultyTarget) + '/sec');
             updateText('networkDifficulty', lastStats.network.difficulty.toString());
             updateText('blockchainHeight', lastStats.network.height.toString());
-            updateText('networkLastReward', getReadableCoins(lastStats.network.reward, 4));
+            updateText('networkLastReward', getReadableCoins(lastStats.network.reward));
             updateText('lastHash', lastStats.network.hash.substr(0, 13) + '...').setAttribute('href', getBlockchainUrl(lastStats.network.hash));
 
             updateText('poolHashrate', getReadableHashRateString(lastStats.pool.hashrate) + '/sec');
@@ -458,7 +458,7 @@
             var hashRate = parseFloat($('#calcHashRate').val()) * rateUnit;
             var profit = (hashRate * 86400 / lastStats.network.difficulty) * lastStats.network.reward;
             if (profit) {
-                updateText('calcHashAmount', getReadableCoins(profit, 2, true));
+                updateText('calcHashAmount', getReadableCoins(profit, 6, true));
                 return;
             }
         }
@@ -504,9 +504,9 @@
         setPayoutLevel(address, level);
     });
 
-	updateText('min_payout', getReadableCoins(lastStats.config.minPaymentThreshold, 2));
+	updateText('min_payout', getReadableCoins(lastStats.config.minPaymentThreshold, 6));
   if (lastStats.config.paymentIdSupported) {
-    updateText('min_payout_paymentid', ' with Payment ID: ' + getReadableCoins(lastStats.config.paymentIdMinPaymentAmount, 2))
+    updateText('min_payout_paymentid', ' with Payment ID: ' + getReadableCoins(lastStats.config.paymentIdMinPaymentAmount, 6))
   }
 
     /* Stats by mining address lookup */
@@ -514,7 +514,7 @@
     function getPaymentCells(payment){
         return '<td>' + formatDate(payment.time) + '</td>' +
                 '<td>' + formatPaymentLink(payment.hash) + '</td>' +
-                '<td>' + getReadableCoins(payment.amount, 4, true) + '</td>' +
+                '<td>' + getReadableCoins(payment.amount, 6, true) + '</td>' +
                 '<td>' + payment.mixin + '</td>';
     }
 
@@ -668,7 +668,7 @@
         if(rawData) {
             for (var i = 0, xy; xy = rawData[i]; i++) {
                 graphData.names.push(new Date(xy[0]*1000).toUTCString());
-                graphData.values.push(fixValueToCoins ? getReadableCoins(xy[1], 4, true) : xy[1]);
+                graphData.values.push(fixValueToCoins ? getReadableCoins(xy[1], 6, true) : xy[1]);
             }
         }        
        
