--- a/website/pages/payments.html
+++ b/website/pages/payments.html
@@ -1,7 +1,7 @@
 <style>
     .paymentsStatHolder > span{
         display: inline-block;
-        border-radius: 5px;
+        border-radius: 3px;
         padding: 1px 9px;
         border: 1px solid #e5e5e5;
         margin: 2px;
@@ -64,8 +64,8 @@
         update: function(){
             updateText('paymentsTotal', lastStats.pool.totalPayments.toString());
             updateText('paymentsTotalPaid', lastStats.pool.totalMinersPaid.toString());
-            updateText('paymentsMinimum', getReadableCoins(lastStats.config.minPaymentThreshold, 3));
-            updateText('paymentsDenomination', getReadableCoins(lastStats.config.denominationUnit, 3));
+            updateText('paymentsMinimum', getReadableCoins(lastStats.config.minPaymentThreshold));
+            updateText('paymentsDenomination', getReadableCoins(lastStats.config.denominationUnit));
             renderPayments(lastStats.pool.payments);
         }
     };
@@ -91,8 +91,8 @@
     function getPaymentCells(payment){
         return '<td>' + formatDate(payment.time) + '</td>' +
                 '<td>' + formatPaymentLink(payment.hash) + '</td>' +
-                '<td>' + getReadableCoins(payment.amount, 4, true) + '</td>' +
-                '<td>' + getReadableCoins(payment.fee, 4, true) + '</td>' +
+                '<td>' + getReadableCoins(payment.amount, 6, true) + '</td>' +
+                '<td>' + getReadableCoins(payment.fee, 6, true) + '</td>' +
                 '<td>' + payment.mixin + '</td>' +
                 '<td>' + payment.recipients + '</td>';
     }
