--- a/website/index.html
+++ b/website/index.html
@@ -361,7 +361,7 @@
             </a>
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav" data-toggle="collapse" data-target=".navbar-collapse">
+            <ul class="nav navbar-nav pool-nav" data-toggle="collapse" data-target=".navbar-collapse">
 
                 <li style="display:none;" class="active"><a class="hot_link" data-page="home.html" href="#">
                     <i class="fa fa-home"></i> Home
