fixed grammatical errors

--- a/website/pages/getting_started.html
+++ b/website/pages/getting_started.html
@@ -145,7 +145,7 @@
         </li>
         <li>
             <p>
-                Check below configure it
+                Check below for configuration
             </p>
         </li>
     </ol>
@@ -161,7 +161,7 @@
         for instructions.
     </p>
     <p>
-        Check below configure it
+        Check below for configuration
     </p>
     <h2>
         Downloading and Installing for Linux
@@ -177,7 +177,7 @@
         <li>Double-click on <code>xmr-stak</code></li>
         <li>
             <p>
-                Check below configure it
+                Check below for configuration
             </p>
         </li>
     </ol>
@@ -193,7 +193,7 @@
         for instructions.
     </p>
     <p>
-        Then, Check below configure it
+        Then, Check below for configuration
     </p>
     <h2>
         XMR-Stak Configuration
@@ -246,7 +246,8 @@ Please enter:
 - plenteum
 - zelerius
 - xcash
-                </pre>
+                </pre
+            >
             <p>
                 Enter <code>turtlecoin</code> or
                 <code>cryptonight_lite_v7</code>
