changed mining pool address

--- a/website/pages/getting_started.html
+++ b/website/pages/getting_started.html
@@ -256,7 +256,7 @@ Please enter:
     </ol>
     <ol start="3">
         <li>
-            <p>Pool address: enter <code>pool.baza.foundation:3333</code></p>
+            <p>Pool address: enter <code>70.35.193.174:3333</code></p>
         </li>
         <li>
             <p>Username (Wallet address or pool login):</p>
