Added nodes status UI

--- a/website/index.html
+++ b/website/index.html
@@ -545,6 +545,16 @@
                             </a>
                         </li>
 
+                        <li>
+                            <a
+                                class="hot_link"
+                                data-page="nodes_stats.html"
+                                href="#nodes_stats"
+                            >
+                                <i class="fa fa-terminal"></i> Nodes Stats
+                            </a>
+                        </li>
+
                         <li class="dropdown">
                             <a
                                 class="dropdown-toggle"
