updated getting started

--- a/website/pages/getting_started.html
+++ b/website/pages/getting_started.html
@@ -71,7 +71,7 @@
     <a href="https://github.com/xmrig/xmrig/">xmrig</a>. Official binaries are
     available for Windows, Ubuntu Linux and Debian.
 </p>
-<h2 id="mining-backends">Mining backends</h2>
+<h2 id="mining-backends">Mining Backends</h2>
 <ul>
     <li><strong>CPU</strong> (x64/ARMv8)</li>
     <li><strong>OpenCL</strong> for AMD GPUs.</li>
@@ -85,14 +85,14 @@
     <li>
         <strong
             ><a
-                href="https://gitlab.ekata.io/baza-foundation/baza-dedicated-miner/-/releases#0.0.1"
+                href="https://gitlab.ekata.io/baza-foundation/baza-dedicated-miner/-/releases#0.0.2"
                 >Binary releases</a
             ></strong
         >
     </li>
 </ul>
 <h2 id="build">Build</h2>
-<h4 id="ubuntu">Ubuntu</h4>
+<h4 id="ubuntu">Ubuntu and Debian</h4>
 <h5 id="basic-build">Basic Build</h5>
 <p>
     Basic build is good for local machine, because it is easy, but if you need
@@ -130,7 +130,7 @@
 </ol>
 <h2 id="cuda">CUDA</h2>
 <h3 id="build">Build</h3>
-<h4 id="ubuntu">Ubuntu</h4>
+<h4 id="ubuntu">Ubuntu and Debian</h4>
 <p>
     Follow instructions on
     <a href="https://developer.nvidia.com/cuda-downloads" target="_blank"
