Added exchange link and EPC how to

--- a/website/index.html
+++ b/website/index.html
@@ -631,6 +631,10 @@
                         <p class="footer-links-title">OTHER LINKS</p>
                         <ul class="other-links footer-links"></ul>
                     </div>
+                    <div class="col-sm-3 col-xs-4">
+                        <p class="footer-links-title">EXCHANGE LINKS</p>
+                        <ul class="exchange-links footer-links"></ul>
+                    </div>
                 </div>
             </div>
             <div class="about">
