added links to footer, added footer id and added title

--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
             content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
         />
 
-        <title>Baza [BAZ] Mining Pool</title>
+        <title>Baza [BAZA] Mining Pool</title>
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
@@ -604,7 +604,7 @@
             </p>
         </div>
 
-        <div class="footer bg-dark">
+        <div class="footer bg-dark" id="footer">
             <div class="baza-logo">
                 <img class="footer-logo" src="themes/img/baza_logo.png" />
             </div>
